update map to use GeoJSON, fix sticky z-index

--- a/wp-content/themes/wp-nycc/assets/scss/app.scss
+++ b/wp-content/themes/wp-nycc/assets/scss/app.scss
@@ -12,6 +12,10 @@
   z-index: 2;
 }
 
+.sticky-container {
+  z-index: 2;
+}
+
 .site-header {
   width: 100%;
   z-index: 2;
